@@ -23,6 +23,7 @@ Changes in progress
 - buddypress: Upgraded plugin from 2.5.3 to 2.7.2 (Trello #1446)
 - buddypress-like: Upgraded plugin from 0.2 to 0.3 and converted into a submodule (Trello #1452)
 - buddypress-docs: Upgraded plugin from 1.9.0 to 1.9.2 (Trello #1442)
+- Themes reactor-primaria-1 and reactor-serveis-educatius: Added field email to Fitxa del Centre and modified behaviour of links for contact and map (Trello #1459)
 
 
 Changes 16.10.24
